Fix button alignment again.

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,6 +14,9 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     line-height: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .transparent-button {
